fixed gap appearing in mobile overlay menu

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -55,7 +55,7 @@
     .nav-primary {
         background: var(--color-dark-gray);
         position: absolute;
-        top: 0;
+        top: -15%;
         left: 0;
         height: 100vh;
         width: 100%;
@@ -105,7 +105,7 @@
             position: relative;
 
             // copy paste des propietes "font" des p
-            font-size: typo(22px, 38px);
+            font-size: typo(22px, 30px);
             font-family: 'Lato';
             font-style: normal;
             font-weight: 400;
