--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,3 +1,13 @@
+.hero svg path {
+    fill: var(--color-white);
+}
+
+.hero .wrapper {
+    display: flex;
+    align-items: end;
+    gap: 40px;
+}
+
 .hero__content {
     margin-top: 20px;
     display: flex;
